--- a/templates/FrontEnd/AfficherFAC.html.twig
+++ b/templates/FrontEnd/AfficherFAC.html.twig
@@ -16,7 +16,7 @@
     <div class="d-flex justify-content-start">
         <form action="{{ path('app_unique_ajouter_une_publication') }}" method="POST">
             <input type="hidden" name="_token" value="{{ csrf_token('ajouter_une_publication') }}">
-            <button type="submit" class="btn btn-outline-light btn-sm mb-3 me-5">Ajouter une publication</button>
+            <button type="submit" class="btn btn-outline-light btn-sm me-5">Ajouter une publication</button>
         </form>
 
         <form action="{{ path('app_generer_pdf_fac', {id: contrat.id}) }}" method="post" target="_blank">
@@ -25,40 +25,60 @@
         </form>
     </div>
 
-    <form action="{{ path('app_supprimer_une_fac') }}" method="POST">
-        <input type="hidden" name="_token" value="{{ csrf_token('supprimer_une_fac') }}">
-        <button type="submit" class="btn btn-outline-light btn-sm mb-3 me-5" onclick="return confirm('Supprimer ?');">Supprimer la fiche d'avancement</button>
-    </form>
+    <div>
+        <form id="delete-form-FAC" action="{{ path('app_supprimer_une_fac') }}" method="POST">
+            <input type="hidden" name="_token" value="{{ csrf_token('supprimer_une_fac') }}">
+        </form>
+        <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-FAC">
+            Supprimer cette fiche d'avancement
+        </button>
+        {% include 'Composants/_confirm_delete_modal.html.twig' with {
+            id: "FAC",
+            modalTitle: "Supprimer la fiche d'avancement",
+            modalMessage: "Voulez-vous vraiment supprimer la fiche d'avancement du contrat No « " ~ contrat.numeroContrat ~ " » ? Cette action est irréversible.",
+            confirmButtonLabel: 'Oui, supprimer'
+        } %}
+    </div>
 </div>
 
 {% set noPublication = 1 %}
 {% for publication in publications %}
 
-    <p class="fs-6 badge text-bg-light mt-5">Publication No {{noPublication}} : {{ publication.titre }}</p>
-    <p>{{ publication.dateHeureMAJ|date('Y-m-d H:i') }}</p>
-    <p>{{ publication.contenu }}</p>
+    <div class="d-flex flex-column">
+        <span class="fs-6 badge text-bg-light mt-5 mb-1" style="width: fit-content">Publication No {{noPublication}} : {{ publication.titre }}</span>
+        <span class="fst-italic fw-light">{{ publication.dateHeureMAJ|date('Y-m-d H:i') }}</span>
+        <span class="mb-2">{{ publication.contenu }}</span>
+    </div>
 
     {% for photo in publication.photos %}
 
         <img src="{{ path('serve_image', { filename: photo.cheminFichierImage }) }}" alt="Image" width="150">
-        <p class="fs-6 fst-italic">{{ photo.legende }}</p>
+        <p class="fs-6 fst-italic fw-light">{{ photo.legende }}</p>
 
     {% endfor %}
 
     <div class="d-flex flex-row mb-3">
         <form action="{{ path('app_unique_editer_une_publication' , {id: publication.id}) }}" method="POST">
-            <button type="submit" class="btn btn-outline-light btn-sm me-3">Editer</button>
+            <button type="submit" class="btn btn-outline-light btn-sm me-3">&#x1f4dd;</button>
         </form>
 
         <form action="{{ path('app_ajouter_un_commentaire_a_une_publication', {idPublication: publication.id}) }}" method="post">
             <input type="hidden" name="_token" value="{{ csrf_token('ajouter_un_commentaire_' ~ publication.id) }}">
-            <button type="submit" class="btn btn-outline-light btn-sm me-3">Commentaire</button>
+            <button type="submit" class="btn btn-outline-light btn-sm me-3">&#x2795;</button>
         </form>
 
-        <form action="{{ path('app_supprimer_une_publication', {id: publication.id}) }}" method="post" class="delete-form">
+        <form id="delete-form-{{ publication.id }}" action="{{ path('app_supprimer_une_publication', {id: publication.id}) }}" method="post">
             <input type="hidden" name="_token" value="{{ csrf_token('supprimer_une_publication_' ~ publication.id) }}">
-            <button type="button" class="btn btn-outline-danger btn-sm btn-delete" onclick="return confirm('Supprimer ?');">Supprimer</button>
         </form>
+        <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-{{ publication.id }}">
+            &#x1f5d1;
+        </button>
+        {% include 'Composants/_confirm_delete_modal.html.twig' with {
+            id: publication.id,
+            modalTitle: 'Supprimer la publication',
+            modalMessage: 'Voulez-vous vraiment supprimer la publication intitulée « ' ~ publication.titre ~ ' » ? Cette action est irréversible.',
+            confirmButtonLabel: 'Oui, supprimer'
+        } %}
     </div>
 
     {% for commentaire in publication.commentairesArbre %}
