--- a/templates/BackEnd/Administrateur/AccueilAdministrateur.html.twig
+++ b/templates/BackEnd/Administrateur/AccueilAdministrateur.html.twig
@@ -6,7 +6,7 @@
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 col-lg-5">
-            <div class="d-flex flex-column align-items-center border rounded-4 p-4 shadow-sm">
+            <div class="d-flex flex-column align-items-center border rounded-4 p-4 shadow">
                 <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
                     <a href="{{ path('app_login') }}">
                         <img class="icon-page-precedente" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
