--- a/templates/BackEnd/Administrateur/listeDesEmployes.html.twig
+++ b/templates/BackEnd/Administrateur/listeDesEmployes.html.twig
@@ -29,16 +29,16 @@
 
 {% block body %}
 
-<a href="{{ path('app_ajouter_un_employe') }}" class="btn btn-outline-light btn-sm mb-4">Ajouter un employé</a>
-
 <div class="d-flex justify-content-end position-fixed top-0 end-0 m-3">
     <a href="{{ path('app_accueil_administrateur') }}">
         <img class="icon-page-precedente" src="{{ asset('assets/images/page_precedente.png') }}" alt="Icône non trouvé."></img>
     </a>
 </div>
 
+<a href="{{ path('app_ajouter_un_employe') }}" class="btn btn-outline-light btn-sm shadow mb-4" data-bs-custom-class="custom-tooltip-ajout shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Ajouter un employé">&#x2795;</a>
+
 <div id="table-desktop" class="d-none d-md-block">
-    <table id="employes" class="table table-striped">
+    <table id="employes" class="table table-striped shadow">
         <thead>
             <tr>
                 <th>Prénom</th>
@@ -56,9 +56,8 @@
                     <td>{% for r in e.roles %}{{r|replace({'ROLE_': ''})|replace({'_':' '})|lower|capitalize}}{% if not(loop.last) %} , {% endif %}{% endfor %}</td>
                     <td>{{e.Courriel}}</td>
                     <td class="d-flex justify-content-between">
-                        <a href="{{ path('app_voir_un_employe' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50 me-2">&nbsp;Voir&nbsp;</a>
-                        <a href="{{ path('app_editer_un_employe' , {id : e.id}) }}" class="btn btn-outline-light btn-sm w-50">Editer</a>
-
+                        <a href="{{ path('app_voir_un_employe' , {id : e.id}) }}" class="btn btn-outline-light btn-sm shadow w-50 me-2" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Voir">&#x1f50d</a>
+                        <a href="{{ path('app_editer_un_employe' , {id : e.id}) }}" class="btn btn-outline-light btn-sm shadow w-50" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Editer">&#x1f4dd;</a>
                     </td>
                 </tr>
             {% endfor %}
@@ -82,6 +81,6 @@
     {% endfor %}
 </div>
 
-<a href="{{ path('app_accueil_administrateur') }}" class="btn btn-outline-light btn-sm mt-4">Retour</a>
+<a href="{{ path('app_accueil_administrateur') }}" class="btn btn-outline-light btn-sm shadow mt-4">Retour</a>
 
 {% endblock %}
