--- a/templates/FrontEnd/voirUnContrat.html.twig
+++ b/templates/FrontEnd/voirUnContrat.html.twig
@@ -39,7 +39,24 @@
 
 <div class="d-flex justify-content-around">
     <a href="{{ path('app_afficher_fac') }}" class="btn btn-sm btn-outline-primary">Consulter la fiche d'avancement du chantier</a>
-    <form action="{{ path('app_supprimer_un_contrat', { 'id': contrat.id }) }}" method="POST" style="display: none;" id="deleteForm{{ contrat.id }}">
+
+    <form id="delete-form-{{ contrat.id }}" action="{{ path('app_supprimer_un_contrat', {id: contrat.id}) }}" method="post">
+        <input type="hidden" name="_token" value="{{ csrf_token('supprimer_un_contrat_' ~ contrat.id) }}">
+    </form>
+    <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal-{{ contrat.id }}">
+        &#x1f5d1;
+    </button>
+    {% include 'Composants/_confirm_delete_modal.html.twig' with {
+        id: contrat.id,
+        modalTitle: 'Supprimer le contrat',
+        modalMessage: 'Voulez-vous vraiment supprimer le contrat No « ' ~ contrat.numeroContrat ~ ' » ? Cette action est irréversible.',
+        confirmButtonLabel: 'Oui, supprimer'
+    } %}
+</div>
+
+
+
+    {# <form action="{{ path('app_supprimer_un_contrat', { 'id': contrat.id }) }}" method="POST" style="display: none;" id="deleteForm{{ contrat.id }}">
         <button type="submit" class="btn btn-danger">Supprimer</button>
         <input type="hidden" name="_token" value="{{ csrf_token('supprimer_un_contrat' ~ contrat.id) }}">
     </form>
@@ -73,7 +90,7 @@
         const form = document.getElementById('deleteForm' + window.contractToDelete);
         form.submit();
     }
-</script>
+</script> #}
 
 {% endif %}
 
@@ -82,12 +99,12 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 col-lg-5 d-flex justify-content-center">
             <div class="card bg-transparent" style="width: 18rem;">
-                <div class="card-body d-flex flex-column">
+                <div class="card-body d-flex flex-column shadow">
                     <h5 class="card-title mx-auto mb-3">{{client.prenom}} {{client.nom}}</h5>
-                    <span class="card-text">Fixe : {{client.telephoneFixe}}</span>
-                    <span class="card-text">Mobile : {{client.telephoneMobile}}</span>
+                    <span class="card-text"><span class="fw-bold">Fixe :</span> {{client.telephoneFixe}}</span>
+                    <span class="card-text"><span class="fw-bold">Mobile :</span> {{client.telephoneMobile}}</span>
                     <span class="card-text">{{client.rueEtNumero}}, {{client.codePostal}} {{client.ville}}</span>
-                    <span class="card-text">Société : {{client.societe}}</span>
+                    <span class="card-text"><span class="fw-bold">Société :</span> {{client.societe}}</span>
                     <br>
                     <span class="card-text">Contrat No : {{contrat.numeroContrat}}</span>
                 </div>
