--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,15 @@
 
         {% block javascripts %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+            {# Pour les Tooltips. #}
+            <script>
+                document.addEventListener('DOMContentLoaded', function () {
+                var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+                var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+                    return new bootstrap.Tooltip(tooltipTriggerEl)
+                })
+                });
+            </script>
             {{ encore_entry_script_tags('app') }}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
@@ -20,6 +29,11 @@
             <img src="{{ asset('assets/images/logo.png') }}" width="80px" alt="Logo CLO non trouvé.">  
             <div class="t-3">Compte client</div>
         </header>
+
+        <div class="d-flex justify-content-end position-fixed top-0 start-0 m-3" data-bs-custom-class="custom-tooltip-edition shadow" data-bs-toggle="tooltip" data-bs-delay='{ "show": 600, "hide": 100 }' data-bs-placement="bottom" data-bs-title="Déconnexion">
+            <a href="{{ path('app_logout') }}" class="btn btn-sm btn-outline-light border border-2 border-opacity-10">&#x1F6AA;</a>
+        </div>
+
         <div class="container">
             {% block body %}{% endblock %}
         </div>
