--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,7 +6,7 @@
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 col-lg-5">
-            <div class="border rounded-4 p-4 shadow-sm bg-white">
+            <div class="border rounded-4 p-4 shadow bg-white">
                 <h1 class="h4 mb-4 text-center">Connexion</h1>
 
                 <form method="post">
